NodejsWebApp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-web-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-web-app
  template:
    metadata:
      labels:
        app: node-web-app
    spec:
      containers:
      - name: node-web-app
        image: ivish/node-web-app:latest
        livenessProbe:
          httpGet:
            path: /health
            port: 49160
        ports:
        - containerPort: 49160
