NodejsWebApp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-web-app-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 49160
  selector:
    app: node-web-app
